<package>
  <name>pose_estimate</name>
  <description>none
  </description>
  <version>0.7.3</version>
  <maintainer email="ooo@gmail.com"></maintainer>
  <author></author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <!-- <build_depend>eigen</build_depend> -->
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>


  <!-- <run_depend>eigen</run_depend> -->
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  

</package>